--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,28 @@
 * {
   box-sizing: border-box; }
 
+@-webkit-keyframes fadein {
+  from {
+    margin-top: 5px;
+    opacity: 0; }
+  to {
+    margin-top: 0;
+    opacity: 1; } }
+
+@keyframes fadein {
+  from {
+    margin-top: 5px;
+    opacity: 0; }
+  to {
+    margin-top: 0;
+    opacity: 1; } }
+
 body {
   margin: 0;
   background: #FEFEFE;
-  color: #333; }
+  color: #333;
+  -webkit-animation: fadein 0.7s;
+  animation: fadein 0.7s; }
   body h1, body h2, body h3 {
     font-family: 'Incosolidata', monospace;
     color: black; }
