--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,10 +2,23 @@ $width: 1020px;
 $gap: 20px;
 *{box-sizing: border-box;}
 
+@keyframes fadein {
+    from {
+      margin-top: 5px;
+      opacity: 0;
+     }
+    to   {
+      margin-top: 0;
+      opacity: 1;
+    }
+}
+
+
 body{
 	margin: 0;
 	background: #FEFEFE;
 	color: #333;
+  animation: fadein 0.7s;
 
 	h1, h2, h3{
     font-family: 'Incosolidata', monospace;
