--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,12 +60,14 @@ header{
     background: red;
   }
   p::first-letter{
+    padding: 5px;
+    margin: 5px;
     color: black;
   }
   p{
     letter-spacing: 10px;
     font-size: 3em;
-    line-height: 0.9em;
+    line-height: 1em;
     font-family: 'Inconsolata', monospace;
     margin: 0;
     padding: 0;
