--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,7 @@ body{
   animation: fadein 0.7s;
 
 	h1, h2, h3{
-    font-family: 'Incosolidata', monospace;
+    font-family: 'Montserrat', sans-serif;
 		color: black;
 	}
 
@@ -61,14 +61,13 @@ header{
   }
   p::first-letter{
     padding: 5px;
-    margin: 5px;
     color: black;
   }
   p{
     letter-spacing: 10px;
     font-size: 3em;
-    line-height: 1em;
-    font-family: 'Inconsolata', monospace;
+    line-height: 1.2em;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
   }
