--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,8 +11,9 @@ body{
   padding: 0;
 }
 
+
 .centered{
-  
+
   text-align: center;
 }
 
@@ -38,10 +39,11 @@ z-index: -2;
 
 .udark{
   border-bottom: 1px solid black;
+  width: 100%;
 }
 
 .spacer{
-  height: 4rem;
+  height: 2rem;
 }
 
 .weird{
@@ -95,8 +97,33 @@ z-index: -2;
   padding: 20px;
   border-radius: 2px 2px 0px 0px;
   box-shadow: 0px 0px 20px #000;
-  background-color: #FFFFEE;
+  background-color: #FFFFF7;
   z-index: 98;
+}
+
+.shallow{
+  margin-bottom: .5rem;
+}
+
+.deep{
+  margin-bottom: 1rem;
+}
+
+h5 {
+  font-size: 3rem;
+  a{
+    color: black;
+    text-decoration: none;
+    target-new:tab;
+
+  }
+}
+strong{
+  a{
+    color: black;
+    text-decoration: none;
+    target-new:tab;
+  }
 }
 
 .portfoliopage{
