--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,8 @@ body {
 .nofun {
   color: black;
   text-decoration: none;
-  letter-spacing: 0.5rem; }
+  letter-spacing: 0.1rem;
+  font-weight: bold; }
 
 .fixbg {
   background: url(../images/back.jpg) no-repeat center center;
@@ -71,7 +72,7 @@ body {
   font-size: 1.7rem;
   font-style: italic;
   color: #eee;
-  letter-spacing: 1rem;
+  letter-spacing: 0.5rem;
   margin-left: auto;
   margin-right: auto;
   text-shadow: 0px 0px 10px #000; }
