--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,7 +20,8 @@ body{
 .nofun{
   color: black;
   text-decoration: none;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.1rem;
+  font-weight: bold;
 }
 
 .fixbg{
@@ -86,7 +87,7 @@ z-index: -2;
   font-size: 1.7rem;
   font-style:italic;
   color: #eee;
-  letter-spacing: 1rem;
+  letter-spacing: 0.5rem;
   margin-left: auto;
   margin-right: auto;
   text-shadow: 0px 0px 10px #000;
