--- a/scss/style.scss
+++ b/scss/style.scss
@@ -144,7 +144,7 @@ strong{
   padding: 20px;
   border-radius: 2px 2px 0px 0px;
   box-shadow: 0px 0px 20px #000;
-  background-color: #FFFFEE;
+  background-color: #FFFFF7;
   z-index: 98;
 }
 
