--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ strong a {
   padding: 20px;
   border-radius: 2px 2px 0px 0px;
   box-shadow: 0px 0px 20px #000;
-  background-color: #FFFFEE;
+  background-color: #FFFFF7;
   z-index: 98; }
 
 .contactpage {
